--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Example .gitignore file for your config dir.
+# An * ensures that everything will be ignored.
+
+*.log*
+*.db
+.ha_run*
+tts
+deps
+!*.yaml
+!.gitignore
+!*.md
 .env
+
+# Ignore folders.
+.storage
+.cloud
+.google.token
+
+# Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
+ip_bans.yaml
+secrets.yaml
+known_devices.yaml
