--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     environment:
       TELEGRAM_BOT_TOKEN: "${TELEGRAM_BOT_TOKEN}"
       TELEGRAM_CHAT_ID: "${TELEGRAM_CHAT_ID}"
-    #network_mode: host
-    ports:
-      - "8123:8123"
+    network_mode: host
     volumes:
       - ./config:/config
       - /etc/localtime:/etc/localtime:ro
